# mockup-engineer

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  create_your_own_repository.py  iterate_over_templates.py
examples/file_repository/: config.json
mockup_engineer/: __init__.py  singleton_meta.py  template_storage.py
mockup_engineer/enums/: __init__.py  device_type.py
mockup_engineer/exceptions/: device_not_found.py  duplicate_identifier.py  template_not_found.py
mockup_engineer/models/: __init__.py  color.py  device.py  point2d.py  size2d.py  template.py
mockup_engineer/readers/: __init__.py  asyncify.py
mockup_engineer/readers/io/: __init__.py  bytesio.py  file.py
mockup_engineer/readers/remote_http/: __init__.py  requests.py
mockup_engineer/renderers/: __init__.py  pillow.py
mockup_engineer/repositories/: __init__.py  asyncify.py
mockup_engineer/repositories/io/: bytesio.py  file.py
mockup_engineer/repositories/remote_http/: requests.py
